# Shunyaku

./: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  ローカル_ホバー翻訳_アプリ：要件定義（tauri_react・非エンジニア向け）.md  実装プラン_レビュー版.md  瞬訳（shunyaku）ブランド資産・ストア文案.md
.storybook/: preview.ts
docs/: phase1-1_distribution_requirements.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdvancedImagePreprocessingTest.stories.tsx  AdvancedImagePreprocessingTest.tsx  Button.stories.tsx  Button.tsx  DeepLPerformanceTest.tsx  DropZone.stories.tsx  DropZone.tsx  FloatingPanel.stories.tsx  FloatingPanel.tsx  KeyboardShortcutsDemo.stories.tsx  KeyboardShortcutsDemo.tsx  PerformanceTestSuite.tsx  PipelineBenchmark.tsx  PipelinePrototype.tsx  ProgressIndicator.stories.tsx  ProgressIndicator.tsx  SettingsModal.stories.tsx  SettingsModal.tsx  TauriMultiWindowTest.tsx  TesseractPerformanceTest.tsx  Toast.stories.tsx  Toast.tsx  TranslationHistorySearch.stories.tsx  TranslationHistorySearch.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: clipboardService.ts  errorCodes.ts  historyStorage.ts  mockServices.ts  ocrService.ts  pipelineIntegrationService.ts  settingsStorage.ts  translationService.ts  windowStateStorage.ts
src/store/: useHistoryStore.ts  useSettingsStore.ts  useWindowStore.ts
src/types/: index.ts
src/workers/: ocrWorker.ts
tests/: README.md
tests/e2e/: performance.spec.ts  translation-flow.spec.ts  ui-functionality.spec.ts
