[package]
name = "shunyaku"
version = "0.1.0"
description = "A local hover translation app"
authors = ["you"]
license = ""
repository = ""
default-run = "shunyaku"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0", features = [ "protocol-asset", "shell-open"] }
tauri-plugin-store = "2.0"
tauri-plugin-clipboard-manager = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "shunyaku"
path = "src/main.rs"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"